dark theme flickering fix, particles not showing on dark theme fix

--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -18,9 +18,7 @@
 .children {
   position: relative;
   z-index: 97;
-  background-color: var(--background-color);
-  color: var(--primary-color);
-  transition: 1s all;
+  
 }
 
 @keyframes bg-animation {
