--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -33,6 +33,9 @@ html,
 body {
   font-family: monumentExtended, Verdana, sans-serif;
   font-size: 62.5%;
+  background-color: var(--background-color);
+  color: var(--primary-color);
+  transition: 1s all;
 }
 
 a {
